--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <style type="text/css">
 <!--
 p {font-family:monospace,monospace;}
-h1 {font-fammily:monospace,monospace;}
+h1 {font-family:monospace,monospace;}
 h2 {font-family:monospace,monospace;}
+body {padding: 10vw;}
 -->
 </style>
 </head>
@@ -17,7 +18,6 @@ h2 {font-family:monospace,monospace;}
 <p>16 oct 2020</p>
 <br>
 <p>One of the things that makes the idea of death so hard to confront and almost a personal offense to the living is that in acknowledging death one must acknowledge the limits to their individuality and the truth that their existence is in many respects no more than a cog in the great, endlessly rotating wheel of living. Death represents the disappearance of our consciousness, which, by separating inside and outside realities, “proves” our individuality. If we accept death, then on some level we also accept that everything I consider unique to me won’t be forever mine, since I am just another cold piece of a biological cycle, fundamentally indifferent to human experience and one’s sense of “self”. Accepting death is the acceptance of the fundamental void and worthlessness of the soul and of the conscience, for they do not exist beyond the illusion of our mind, and hence the meaninglessness of what we know as “living”. Accepting death is accepting that the meaning I gave to things may not have any currency outside the sandbox of my imagination. And that none of me “matters”, and that “I”—that name by which I separate myself from the cold, supposedly meaningless world—might not even exist.
-<br>
-Yet, if living holds no meaning beyond our personal consciousness, then life is no more than death—and hence, death is no worse than living.</p>
+<p>Yet, if living holds no meaning beyond our personal consciousness, then life is no more than death—and hence, death is no worse than living.</p>
 </body>
 </html>
