--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>chilicrisp</title>
 <style type="text/css">
 <!--
-p {font-family:monospace,monospace;}
+p {font-family:monospace,monospace;line-height: 1.2;}
 h1 {font-family:monospace,monospace;}
 h2 {font-family:monospace,monospace;}
 body {padding: 10vw;}
@@ -12,12 +12,20 @@ body {padding: 10vw;}
 </style>
 </head>
 <body>
-<h1>thoughts</h1>
-<br><br><br>
-<h2>death</h2>
-<p>16 oct 2020</p>
+<h1 style="color:grey;">THOUGHTS</h1>
 <br>
-<p>One of the things that makes the idea of death so hard to confront and almost a personal offense to the living is that in acknowledging death one must acknowledge the limits to their individuality and the truth that their existence is in many respects no more than a cog in the great, endlessly rotating wheel of living. Death represents the disappearance of our consciousness, which, by separating inside and outside realities, “proves” our individuality. If we accept death, then on some level we also accept that everything I consider unique to me won’t be forever mine, since I am just another cold piece of a biological cycle, fundamentally indifferent to human experience and one’s sense of “self”. Accepting death is the acceptance of the fundamental void and worthlessness of the soul and of the conscience, for they do not exist beyond the illusion of our mind, and hence the meaninglessness of what we know as “living”. Accepting death is accepting that the meaning I gave to things may not have any currency outside the sandbox of my imagination. And that none of me “matters”, and that “I”—that name by which I separate myself from the cold, supposedly meaningless world—might not even exist.
-<p>Yet, if living holds no meaning beyond our personal consciousness, then life is no more than death—and hence, death is no worse than living.</p>
-</body>
+<h2>DEATH</h2>
+<p>29 feb 2020</p>
+<p>One of the things that makes the idea of death so hard to confront and almost a personal offense to the living is that in acknowledging death one must acknowledge the limits to their individuality and the truth that their existence is in many respects no more than a cog in the great, endlessly rotating wheel of living. Death represents the disappearance of our consciousness, which, by separating inside and outside realities, “proves” our individuality. If we accept death, then on some level we also accept that everything I consider unique to me won’t be forever mine, since I am just another cold piece of a biological cycle, fundamentally indifferent to human experience and one’s sense of “self”. Accepting death is the acceptance of the fundamental void and worthlessness of the soul and of the conscience, for they do not exist beyond the illusion of our mind, and hence the meaninglessness of what we know as “living”. Accepting death is accepting that the meaning I gave to things may not have any currency outside the sandbox of my imagination. And that none of "me" holds permanent value, and that “I” (that name encapsulating the experience of meaningful life, by which I separate myself from the cold, meaningless world of biological fact) might not even exist.</p>
+<p>Yet, if living holds no meaning beyond our personal consciousness, then life is no more than death -- and hence, death is no worse than living.</p>
+<br><br>
+<br><h2>THE BALCONY</h2>
+<p>28 july 2020</p>
+<p>I've been eyeing the balcony for some time now.</p>
+<p>On one side there is mortal domesticity, on the other, freefall.</p>
+<p>The minute you cross the line you have announced your resolute rejection of the former. There is no nuance, and it takes just one step.</p>
+<p>The balcony is fascinating because, with just the thickness of a railing, it embodies the antagonistic relationship between mortality and eternity.</p>
+<p>The balcony is provocative because it reminds us of our freedom as beings. When we are on the balcony, we flaunt to ourselves, and to the judgmental eye of humanity, the ease with which we could destroy, and just how fast we could rip the curtains off the fragile, twig-thin foundations of our conception of life. Changing balcony sides would be the biggest act of rebellion against human morality. It mocks manmade complexity by its simplicity, which is as simple as the universe.</p>
+<p>"Human nature" assumes, for its own protection—and to convince its followers that abandonment is not even an option—that it cannot be duped so easily. But the physical limits to its influence are a reminder that the concept of humanity exists only thanks to what it seeks to undermine: physical life and the death inherent to mortality. Any clear position of danger is a boundary to human nature, but what the balcony does best is illustrate the concept by physically embodying the ledge of death. When we are confronted with the absolute simplicity of abandonment of "human nature" we naturally bring into doubt its claim to power. There is a conflict between our two nature as humans on earth: that of Human and that of (simply) being.</p>
+<p>But beyond this there is the question of the implications of jumping off the balcony. The pain we could cause by not just repudiating the unnecessary weight of human society but also that of the love we can no longer supply to those we love. It's distinct from the noise the pretense of Humanity makes. Perhaps love (and consequently its absence) is the only thing that matters, in that it goes beyond our material experience. I don't know how to back this belief up. But it would be disingenuous to claim love is as perceivable to the materially alive human in its purely abstract shape as it is in the form of words hugs kisses and smiles. Our death would cause harm to others in more ways than one. If love is partly the wish for our loved ones to feel good, then jumping off that balcony is to an extent also the abandonment of part of our love. Thus, our show of desertion of human values also hurts what we seek to preserve.</p>
 </html>
