--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {padding: 10vw;}
 </style>
 </head>
 <body>
-<h1 style="color:grey;">THOUGHTS</h1>
+<h1><u>THOUGHTS</u></h1>
 <br>
 <h2>DEATH</h2>
 <p>29 feb 2020</p>
