--- a/index.html
+++ b/index.html
@@ -30,4 +30,18 @@ body {padding: 10vw;}
 <p>But beyond this there is the question of the implications of jumping off the balcony. The pain we could cause by not just repudiating the unnecessary weight of human society but also that of the love we can no longer supply to those we love. It's distinct from the noise the pretense of Humanity makes. Perhaps love (and consequently its absence) is the only thing that matters, in that it goes beyond our material experience. I don't know how to back this belief up. But it would be disingenuous to claim love is as perceivable to the materially alive human in its purely abstract shape as it is in the form of words hugs kisses and smiles. Our death would cause harm to others in more ways than one. If love is partly the wish for our loved ones to feel good, then jumping off that balcony is to an extent also the abandonment of part of our love. Thus, our show of desertion of human values also hurts what we seek to preserve.</p>
 <br><br><br>
 <p><a href="https://www.youtube.com/watch?v=7_QydNXI_ok">でもあなた大事な夢を描く<br>終わるまではずっと　そう　ここで<br>待っている<br><br>You're lonely rolling star<br>あきらめないでよ　ねぇ<br>You're lonely rolling star<br>たまに電話して<br>You're lonely rolling star<br>会いたいよ今すぐ<br>はぁ　ため息がひとつ<br>こぼれる</a></p>
-</html>
+<br>
+<h2>THIS WEBSITE</h2>
+<p>1 nov 2020</p>
+<p>This webpage
+<p>It has to be both intensely personal and public at the same time.
+<p>The appeal is that anyone could fall upon this and see what I'm thinking.
+<p>(in 2020, does anybody find these kinds of webpages so long as they're not linked on any social media?)
+<p>The thought of someone knowing all these personal things is exciting.
+<p>On some level though I am acting because I am purposely exaggerating the thoughts I don't share with others ... the excitement is proportional to the extent to which the thoughts I published here are shocking. If I were to just write like I do in normal situations the experiment wouldn't work, it would be just public thoughts in a public setting.
+<p>Everything  is so high stakes usually, so creating a world in which even the most dangerous thoughts may exist without the possibility of kneejerk reproach is fabulous.
+<p>I have to make sure I don't fall into role-play when I write on here, though. I have a tendancy to progressively drift away from reality and unconsciously change personas in my mind. To aspire to some archetypal or mythological figure and imitate them. I don't know if there's a specific archetype I'd be likely to start imitating when I write on here. I can vaguely picture myself pretending I'm an extremely dramatic depressive mysterious sexy type. Beyond that I don't know. Images form in the mind over time: you can't, shouldn't, predict them in advance or all the fun is ruined.
+<br>
+<p>Today I went for my ******************* *** **** walk, like a dog on its leash. I look through the window of a Edward Green shop. I didn't realize how high-end it was, it seemed like all models were around the 1.5k range. The attention to detail is nice and clearly the shoes are well-made, but I don't see the point at that price tag, given that the designs are far from original. If I were buying shoes at that price tag I would just save up and get a pair custom-made. Then again the average person's (rich or not) taste and design sense is questionable.
+<br>
+<p>Oh, E, I wonder what you'd think about my new fashion taste? I've gotten so much more adventurous, just like you are. Maybe it's a bit of you that's being channeled through me. When you died your soul exploded into a million pieces and a little bit landed in each person you loved's heart, like stardust. Good thing the fashion bits didn't get wasted on people who don't know what they're doing. Haha... just kidding.
