--- a/index.html
+++ b/index.html
@@ -45,3 +45,21 @@ body {padding: 10vw;}
 <p>Today I went for my ******************* *** **** walk, like a dog on its leash. I look through the window of a Edward Green shop. I didn't realize how high-end it was, it seemed like all models were around the 1.5k range. The attention to detail is nice and clearly the shoes are well-made, but I don't see the point at that price tag, given that the designs are far from original. If I were buying shoes at that price tag I would just save up and get a pair custom-made. Then again the average person's (rich or not) taste and design sense is questionable.
 <br>
 <p>Oh, E, I wonder what you'd think about my new fashion taste? I've gotten so much more adventurous, just like you are. Maybe it's a bit of you that's being channeled through me. When you died your soul exploded into a million pieces and a little bit landed in each person you loved's heart, like stardust. Good thing the fashion bits didn't get wasted on people who don't know what they're doing. Haha... just kidding. Ugh, I wish you were here with me so we could chat.
+<br>
+<h2>Haikus</h2>
+<p>7 dec 2020</p>
+<p>Always on the road
+<p>The one train you didn't miss
+<p>Train going nowhere
+<br>
+<p>Like little fireworks
+<p>Those little parcels of hope
+<p>Stain the midnight sky
+<br>
+<p>Sit and watch it grow
+<p>Floating in the sky
+<p>Little ball of warmth
+<br>
+<p>Sunny winter day
+<p>Against all odds it proved
+<p>All yellow and blue
