--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@ body {padding: 10vw;}
 <br>
 <h2>Haikus</h2>
 <p>7 dec 2020</p>
-<p>Always on the road
+<p><b>A</b>lways on the road
 <p>The one train you didn't miss
 <p>Train going nowhere
 <br>
-<p>Like little fireworks
+<br>
+<p><b>L</b>ike little fireworks
 <p>Those little parcels of hope
 <p>Stain the midnight sky
 <br>
-<p>Sit and watch it grow
+<br>
+<p><b>S</b>it and watch it grow
 <p>Floating in the sky
 <p>Little ball of warmth
 <br>
-<p>Sunny winter day
+<br>
+<p><b>S</b>unny winter day
 <p>Against all odds it proved
 <p>All yellow and blue
