--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {padding: 10vw;}
 <br>
 <br>
 <p><b>S</b>it and watch it grow
-<p>Floating in the sky
+<p>Floating in the pale grey sky
 <p>Little ball of warmth
 <br>
 <br>
