--- a/index.html
+++ b/index.html
@@ -66,3 +66,6 @@ body {padding: 10vw;}
 <p><b>S</b>unny winter day
 <p>Against all odds it proved
 <p>All yellow and blue
+<br>
+<h2>14 dec 2020</h2>
+<p>I'm angry at the god who made me sit through all that.</p>
