--- a/index.html
+++ b/index.html
@@ -71,3 +71,15 @@ body {padding: 10vw;}
 <br>
 <h2>14 dec 2020</h2>
 <p>I'm angry at the god who made me sit through all that.</p>
+<br>
+<br>
+<h2>4 sept 21</h2>
+<p>It was extremely cathartic to me, when we met on the afternoon of the 31st to discuss our friendship and part ways. It's only been 5 Days, and yet it’s almost hard to think that we’ve gone so long without speaking, not one casual exchange, not a text. And yet I know it’s for the best, but it feels like I’ve lost a limb somewhere. I’m truly on my own, now.
+<br>
+<p>I wonder if you think of me often? It’s strange: it feels like a romantic breakup. Every time I am reminded of you, and of us (two ends of a friendship) I can feel a little pang in my stomach.
+<br>
+<p>I hope you miss me too. I hope you're not having too much fun without me, except it looks like -- from what you've been posting on Instagram -- you have been enjoying yourself.
+<br>
+<p>I hope the words I threw at you stuck, some of them at least. It's not that I am an egomaniac, it's that I want to feel wanted and the thought that our extended, almost intense in many respects, friendship might have been nothing but a passing moment in the story of your life. I'd like to think of a friendship as more than just personal posession; I see it as something of its own where, as friendship blooms a life force worthy of its independence is born. To think that someone could forget that is like thinking you were wrong to think it was powerful enough to merit existence beyond the mind. And friendship is not a fact but the dress that you wear, it isn't something that disappears because you forget about it. It will stay with you wherever you go, it will have hit you in certain ways as to help design your shape when you walk through this world. I don't want to disappear from your life, I don't want our friendship to be history -- regardless of its present status -- because then it never was a true friendship, and we didn't create anything together, and I didn't have reason to believe in the beatuy of something I thought mattered. So, I hope you still think of me the way I think of you.
+<br>
+<p> And I hope you invite me to that party of yours you're planning to throw in October. I'll be there and I promise I'll be fun. And after that I don't think we should reconnect and go back to being friends like we were before all this. We've shared something, and both of us can see it glowing in the space between us. No matter how far apart we might get, it will continue to glow in the space that separates us. And its glow will diffuse and paint the walls and the clothes of others surrounding us with light. So, from far away, we wave and we smile at each other, if only wanly, before moving onto something else. But the ball of light that is our friendship will guide us to one another months, years later, or even in a future life.</p>
